Make KDEPIM 4.6 compile with master

This makes the rcgen produce add/setProperty( QList<T> ) functions for
properties with nrl:maxCardinality and nrl:cardinality = 1. This was
required because with SDO 0.7 the cardinalities of many properties
have been set.

BUG: 268595